Bug 475994 - TVT_IES45_Orion: Bad alignment appeared on many languages(02)

--- a/bundles/org.eclipse.orion.client.ui/web/sites/siteEditor.css
+++ b/bundles/org.eclipse.orion.client.ui/web/sites/siteEditor.css
@@ -18,9 +18,13 @@
 	text-align: left;
 }
 
+.siteEditorTable .cell {
+	width: 70%;
+}
+
 .siteEditorTable .header {
 	vertical-align: top;
-	min-width: 10em;
+	width: 20%;
 }
 .siteEditorTable td {
 	vertical-align: middle;
